--- a/workbench/java/cfsyntax/.classpath
+++ b/workbench/java/cfsyntax/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="bin/" kind="src" path=""/>
-	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/bliki-3.0.6.jar"/>
 	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/commons-fileupload-1.2.jar"/>
 	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/commons-httpclient-3.1.jar"/>
@@ -12,5 +11,6 @@
 	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/itext-paulo-155.jar"/>
 	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/jakarta-oro.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/bliki-3.0.9-1.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
