Finalized Release Builder.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@192 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/build.xml
+++ b/build.xml
@@ -32,7 +32,6 @@
         	</fileset>
         </copy>		
         <!-- Create Workbench -->
-        <mkdir dir="${build.dir}/workbench"/>
         <!-- Copy Stuff -->
 		<copy todir="${build.dir}/frameworks">
 			<fileset dir="${workbench.dir}/frameworks">
@@ -45,7 +44,7 @@
 			</fileset>
 		</copy>		
 		<!--Build Stuff -->	
-		<concat destfile="${build.dir}\${build.label}">Built on ${start.TODAY}</concat>
+		<concat destfile="${build.dir}\${codex.version}.txt">Built on ${start.TODAY}</concat>
 	</target>
 		
 	<target name="distribute" depends="build" description="Creates a zip archive of site for (re)distribution">
