New constructor for non TOC base url setups.  New method for parsing [[Image]] tags and resolving external image links.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@291 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/workbench/java/bliki-extensions/build.xml
+++ b/workbench/java/bliki-extensions/build.xml
@@ -5,7 +5,11 @@
 	<property name="dist" location="../../../src/model/wiki/parser/lib/bliki"/>	
     
   <target name="compile" depends="cleanALL" description="compile">
-  	<javac srcdir="${src}" destdir="${build}" debug="true" debuglevel="lines,vars,source" target="1.5" source="1.5"/>
+	<javac srcdir="${src}" destdir="${build}" debug="true" debuglevel="lines,vars,source" target="1.5" source="1.5">
+		<classpath>
+			<fileset dir="${dist}" includes="*.jar"/>
+		</classpath>
+	</javac>
   	<antcall target="jarBuild"></antcall>
   </target>
     
