--- a/workbench/java/bliki-extensions/.classpath
+++ b/workbench/java/bliki-extensions/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="bin/" kind="src" path=""/>
+	<classpathentry excluding="bin/|doc/" kind="src" path=""/>
 	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/commons-fileupload-1.2.jar"/>
 	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/commons-httpclient-3.1.jar"/>
@@ -13,7 +13,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/codexWiki/src/model/wiki/parser/lib/bliki/bliki-3.0.9-1.5.jar"/>
 	<classpathentry kind="lib" path="C:/Inetpub/wwwroot/applications/codexwiki/src/model/wiki/parser/lib/bliki/jakarta-oro.jar"/>
-	<classpathentry kind="lib" path="C:/Inetpub/wwwroot/applications/codexwiki/src/model/wiki/parser/lib/bliki/bliki-3.0.9-1.5.jar"/>
+	<classpathentry kind="lib" path="C:/Inetpub/wwwroot/applications/codexwiki/src/model/wiki/parser/lib/bliki/bliki-3.0.9-1.5.jar" sourcepath="C:/MyDocs/EclipseWorkspaces/Europa/bliki.3.0.9/info.bliki.wiki.svn"/>
 	<classpathentry kind="lib" path="C:/Inetpub/wwwroot/applications/codexwiki/src/model/wiki/parser/lib/bliki/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="C:/Inetpub/wwwroot/applications/codexwiki/src/model/wiki/parser/lib/bliki/commons-fileupload-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Inetpub/wwwroot/applications/codexwiki/src/model/wiki/parser/lib/bliki/commons-httpclient-3.1.jar"/>
