nightly builds changed
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@349 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/workbench/ant/dailybuild/common.properties
+++ b/workbench/ant/dailybuild/common.properties
@@ -1,5 +1,5 @@
 # svn settings
-svn.url=http://ortus.svnrepository.com/svn/codexwiki/codexwiki/trunk/
+svn.url=http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk
 svn.user=nightlybuild
 svn.password=nightlybuild
 svn.label=BUILD
