more updates to pure wirebox

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .DS_Store
 .settings/*
 settings.xml
-src/config/definitions
-src/coldbox
-src/coldspring
-src/transfer
-src/WEB-INF
+config/definitions
+coldbox
+WEB-INF
 .project
+_modules/*
+logs/*
