--- a/workbench/build.xml
+++ b/workbench/build.xml
@@ -1,53 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project name="Codex.ReleaseBuild" default="distribute" basedir=".">
+<project name="Codex.ReleaseBuild" default="distribute" basedir="../">
 
 	<description>Codex Release Build</description>
 	
 	<!-- Properties -->
-	<property name="src.dir" 			value="src" />
+	<property name="src.dir" 			value="." />
 	<property name="workbench.dir" 		value="workbench" />
 	<property name="build.dir" 			value="build" />
 	<property name="dist.dir" 			value="dist" />
-	<property name="ftp.server"  		value="ftp.codexwiki.org" />
+	<property name="ftp.server"  		value="codexplatform.com" />
 	<property name="ftp.remotedir" 		value="/httpdocs/builds" />
 	
 	<!-- dynamic values for build -->
 	<tstamp prefix="start"/>
 	
+	<!-- Init Build -->
 	<target name="init" description="Initializes a project and all relevant data" depends="clean">
 		<input addproperty="codex.version" message="Codex Version" />
 		<mkdir dir="${build.dir}"/>
 		<mkdir dir="${dist.dir}"/>
 	</target>
-
+	
+	<!-- Clean Content -->
 	<target name="clean" description="Remove all directories">
 		<delete dir="${build.dir}" verbose="true"/> 
-		<delete dir="${dist.dir}" verbose="true"/> 
+		<delete dir="${dist.dir}"  verbose="true"/> 
 	</target>
-
+	
+	<!-- Build Codex -->
 	<target name="build" depends="init" description="Copies fileset from source to build directory, adding a label file">
+		
 		<!-- Copy Codex -->
 		<copy todir="${build.dir}/codex/">
         	<fileset dir="${src.dir}">
+        		<exclude name="coldbox/**" />
+        		<exclude name=".git/**" />
+        		<exclude name=".project" />
+        		<exclude name="settings.xml" />
+        		<exclude name=".DS_Store" />
         		<exclude name="WEB-INF/**" />
+        		<exclude name="${build.dir}/**" />
+        		<exclude name="${dist.dir}/**" />
+        		<exclude name="${workbench.dir}/**" />
         	</fileset>
-        </copy>		
-        <!-- Create Workbench -->
+        </copy>	
+		
         <!-- Copy Stuff -->
 		<copy todir="${build.dir}/frameworks">
 			<fileset dir="${workbench.dir}/frameworks">
         	</fileset>
         </copy>		
+		
         <!-- Copy Migrations -->
         <copy todir="${build.dir}/codex/install/migrations">
 			<fileset dir="${workbench.dir}/sql">
 				<exclude name="EAGeneration"/>
 			</fileset>
 		</copy>		
+		
 		<!--Build Stuff -->	
 		<concat destfile="${build.dir}\${codex.version}.txt">Built on ${start.TODAY}</concat>
 	</target>
-		
+	
+	<!-- Distribute it -->
 	<target name="distribute" depends="build" description="Creates a zip archive of site for (re)distribution">
 		
 		<zip destfile="${dist.dir}/codex_v${codex.version}.zip"
@@ -64,6 +79,7 @@
 		
 	</target>
 	
+	<!-- Deploy -->
 	<target name="ftp.deploy" depends="distribute" >
 		<input message="Please enter ftp server username:" addproperty="ftp.username" />
 		<input message="Please enter fpt server password:" addproperty="ftp.password" />
@@ -71,6 +87,7 @@
 		<ftp action="send" server="${ftp.server}" userid="${ftp.username}" password="${ftp.password}" 
 			remotedir="${ftp.remotedir}" passive="yes" verbose="yes">
 			<fileset dir="${dist.dir}/codex_v${codex.version}.zip" />
+			<fileset dir="${dist.dir}/codex_v${codex.version}_noframeworks.zip" />
 		</ftp>
 	</target>
 	
